[package]
name = "ultra_chat_server"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full", "tracing"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
dashmap = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
parking_lot = "0.12"
flume = "0.11"
ring = "0.17"
base64 = "0.22"
rand = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
opt-level = 3
