[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Socket.IO compatible server
socketioxide = { version = "0.15", features = ["state"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Firebase Admin SDK (using JWT for OAuth2)
jsonwebtoken = "9.3"

# Cryptography
aes-gcm = "0.10"
base64 = "0.22"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

# Configuration
dotenv = "0.15"

# Async utilities
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"

# Rate limiting
governor = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
